fixed tracklist spacing on mobile

--- a/sc-theme/assets/style.scss
+++ b/sc-theme/assets/style.scss
@@ -170,6 +170,10 @@ h5 {
     font-family: $font-secondary;
     font-size: $h5;
     line-height: $h5 * 1.4;
+    @media #{$tablet} {
+        font-size: $h5 * 0.8;
+        line-height: $h5 * 1.4 * 0.8;
+    }
     @media #{$mobile} {
         font-size: $h5 * 0.8;
         line-height: $h5 * 1.4 * 0.8;
@@ -561,6 +565,14 @@ time {
     font-family: $font-secondary;
     font-size: $h5;
     line-height: $h5 * 1.2;
+    @media #{$tablet} {
+        font-size: $h5 * 0.8;
+        line-height: $h5 * 1.4 * 0.8;
+    }
+    @media #{$mobile} {
+        font-size: $h5 * 0.8;
+        line-height: $h5 * 1.4 * 0.8;
+    }
 }
 
 img {
@@ -773,6 +785,10 @@ a.item { /* item modules */
             min-height: $thumbnail_tablet;
             line-height: $h4 * 1.4;
         }
+        @media #{$mobile} {
+            min-height: $thumbnail_tablet;
+            line-height: $h4 * 1.4;
+        }
         div.text { 
             display: inline-block;
             width: calc(100% - 132px - 24px);
@@ -821,6 +837,10 @@ a.item { /* item modules */
             font-family: $font-secondary;
             margin-block-end: 0;
             margin-block-start: 0.5em;
+            @media #{$tablet} {
+                font-size: $h5 * 0.8;
+                line-height: $h5 * 1.4 * 0.8;
+            }
         }
         
     }
@@ -944,6 +964,9 @@ section.content { /*news article, cart page */
     }
     time {
         font-size: $h4;
+        @media #{$tablet} {
+            font-size: $h5;
+        }
         @media #{$mobile} {
             font-size: $h5;
         }
@@ -1161,8 +1184,7 @@ Page Specific Overrides
     }
 
 }
-.template-product { /* product post, music and/or merch */
-
+.template-product { 
 
     .subdescription, .tracklist, .credit, .video-credit {
         font-size: $h4;
@@ -1178,6 +1200,12 @@ Page Specific Overrides
     .tracklist, #product-variants {
         border: solid 1px;
         padding: 8px 24px;
+
+        @media #{$tablet} {
+            font-size: $h5;
+            line-height: $h5 * 1.4;
+            padding: 8px 16px;
+        }
         
         @media #{$mobile} {
             font-size: $h5;
@@ -1257,8 +1285,8 @@ Page Specific Overrides
         ul {
             li {
                 list-style-type: decimal-leading-zero;  
-                display: flex;
-                flex-direction: row;
+                // display: flex;
+                // flex-direction: row;
                 padding: 0;
                 align-items: baseline;
                 display: grid;
@@ -1268,28 +1296,36 @@ Page Specific Overrides
                 }
                 div {
                     margin-right: 16px;
+                    @media #{$tablet} {
+                        margin-right: 8px;
+                    }
                     @media #{$mobile} {
                         margin-right: 8px;
                     }
                 }
+
                 div.track_play {
                     margin-right: 32px;
+                    @media #{$tablet} {
+                        margin-right: 8px;
+                    }
                     @media #{$mobile} {
-                        margin-right: 50px;
+                        margin-right: 10px;
                     }
                 }
                 div:nth-child(5n+2) { /* title */
                     width: 100%;
                 }
                 div:nth-child(5n+3) { /* duration */
-                    @media #{$mobile} {
-                        display: none;
-                    }
+                
+                    // @media #{$mobile} {
+                    //     display: none;
+                    // }
                 }
                 div.track_play a{
                     display: inline-block;
                     width: 40px;
-                    height:  40px;
+                    height: 40px;
                     text-align: center;
                     padding-top: 5.5px;
                     border-top: 2px solid #fff;
@@ -1298,6 +1334,14 @@ Page Specific Overrides
                     border-bottom: 2px solid #200304;
                     border-radius: 50%;
                     transition: background-color $transition;
+                    @media #{$tablet} {
+                        width: 30px;
+                        height: 30px;
+                    }
+                    @media #{$mobile} {
+                        width: 30px;
+                        height: 30px;
+                    }
                     &:hover {
                         background-color:$black;
                         svg path {
@@ -1371,8 +1415,15 @@ Page Specific Overrides
         }
         div:nth-child(2) {
             column-count: 2;
+            @media #{$mobile} {
+                column-count: 1;
+            }
         }
         .credit {
+            @media #{$mobile} {
+                margin-top: $spacing_sm;
+                margin-bottom: 0;
+            }
             div {
                 padding-right: 8px;
             }
